--- a/geptrafit.html
+++ b/geptrafit.html
@@ -80,12 +80,38 @@
         transform: rotate(15deg);
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
+      .video-container {
+        position: relative;
+        width: 100%;
+        max-width: 300px; /* Max width for the video container */
+        height: 533px; /* Height for 9:16 aspect ratio based on max-width */
+        margin: auto;
+        border-radius: 20px;
+        overflow: hidden;
+        background-color: #000;
+        border: 3px solid var(--primary-color);
+      }
+      .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
     <!-- Language Switcher -->
     <div class="bg-emerald-800 text-white py-2">
-      <div class="container mx-auto px-6 flex justify-center items-center">
+      <div class="container mx-auto px-6 flex justify-between items-center">
+        <a href="#" aria-label="Geptrafit">
+          <img
+            src="assets/Geptrafit.png"
+            alt="super pamyat"
+            width="80"
+            height="30"
+          />
+        </a>
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
@@ -114,7 +140,7 @@
       <div
         class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
       >
-        <div class="lg:w-1/2 text-center lg:text-left">
+        <div class="lg:w-1/2 text-center lg:text-left order-2 lg:order-1">
           <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">
             <span class="lang-ru">ГЕПТРАФИТ</span>
             <span class="lang-uz">GEPTRAFIT</span>
@@ -152,12 +178,16 @@
             <span class="lang-en">*Anonymous delivery guaranteed.</span>
           </p>
         </div>
-        <div class="lg:w-1/2 mt-8 lg:mt-0 flex justify-center">
+        <div
+          class="lg:w-1/2 mt-8 lg:mt-0 flex justify-center order-1 lg:order-2"
+        >
           <div class="relative w-max">
             <img
-              src="assets/Geptrafit.png"
+              src="assets/12. Гептрафит Капсула - bottle.png"
               alt="Изображение продукта Гептрафит"
               class="rounded-lg shadow-2xl max-w-xs md:max-w-sm"
+              width="150"
+              height="150"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -709,6 +739,43 @@
         </div>
       </section>
 
+      <!-- Video Explanation Section -->
+      <section class="py-16 bg-white">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
+          >
+            <span class="lang-ru">Как это работает? Смотрите видео!</span>
+            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
+            <span class="lang-en">How Does It Work? Watch the Video!</span>
+          </h2>
+          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Узнайте все о преимуществах "Гептрафит" в этом коротком и
+              информативном видео.</span
+            >
+            <span class="lang-uz"
+              >Ushbu qisqa va ma'lumotli videoda "Geptrafit"ning barcha
+              afzalliklari haqida bilib oling.</span
+            >
+            <span class="lang-en"
+              >Learn all about the benefits of "Geptrafit" in this short and
+              informative video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed//-dnaOl9SINM"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+
       <!-- 9. Testimonials -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
@@ -832,7 +899,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/Geptrafit.png"
+              src="assets/12. Гептрафит Капсула - bottle.png"
               alt="Продукт Гептрафит"
               class="w-1/2 mx-auto mb-4"
             />
