--- a/geptrafit.html
+++ b/geptrafit.html
@@ -137,15 +137,83 @@
 
     <!-- 1. Hero Section -->
     <header class="hero-gradient text-white py-12 sm:py-20">
+      <div class="container mx-auto px-6 text-center lg:hidden">
+        <!-- Логотип - первый элемент на мобилке -->
+        <div class="mb-6">
+          <img
+            src="assets/Geptrafit.png"
+            alt="Логотип гептрафит"
+            height="150"
+            width="200"
+            class="max-w-full h-auto mx-auto"
+          />
+        </div>
+        <p class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0">
+          <span class="lang-ru"
+            >Натуральный комплекс для очищения, восстановления и защиты
+            печени.</span
+          >
+          <span class="lang-uz"
+            >Jigarni tozalash, tiklash va himoya qilish uchun bioaktiv
+            kapsulalar.</span
+          >
+          <span class="lang-en"
+            >Natural Liver Cleanse and Repair Formula with Silymarin &
+            Phospholipids.</span
+          >
+        </p>
+
+        <!-- Изображение продукта -->
+        <div class="mb-8 flex justify-center">
+          <div class="relative w-max">
+            <img
+              src="assets/12. Гептрафит Капсула - bottle.png"
+              alt="Изображение продукта geptrafit"
+              class="rounded-lg shadow-2xl max-w-xs"
+              width="150"
+              height="150"
+            />
+            <div class="discount-bubble">-50%</div>
+          </div>
+        </div>
+
+        <!-- Кнопка заказа -->
+        <div>
+          <a
+            href="#order-form"
+            class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+          >
+            <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+            <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+            <span class="lang-en">ORDER NOW →</span>
+          </a>
+
+          <p class="text-xs mt-4 opacity-80">
+            <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+            <span class="lang-uz"
+              >*Anonim yetkazib berishni kafolatlaymiz.</span
+            >
+            <span class="lang-en">*Anonymous delivery guaranteed.</span>
+          </p>
+        </div>
+      </div>
+      <!-- Десктопная версия -->
       <div
-        class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
+        class="container mx-auto px-6 hidden lg:flex lg:flex-row items-center gap-8"
       >
-        <div class="lg:w-1/2 text-center lg:text-left order-2 lg:order-1">
-          <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">
-            <span class="lang-ru">ГЕПТРАФИТ</span>
-            <span class="lang-uz">GEPTRAFIT</span>
-            <span class="lang-en">GEPTRAFIT</span>
-          </h1>
+        <div class="lg:w-1/2 text-left">
+          <!-- Логотип -->
+          <div class="mb-6">
+            <img
+              src="assets/Geptrafit.png"
+              alt="Логотип Geptrafit"
+              height="150"
+              width="200"
+              class="max-w-full h-auto"
+            />
+          </div>
+
+          <!-- Описание -->
           <p
             class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0"
           >
@@ -162,6 +230,73 @@
               Phospholipids.</span
             >
           </p>
+
+          <!-- Кнопка заказа -->
+          <div>
+            <a
+              href="#order-form"
+              class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+            >
+              <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+              <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+              <span class="lang-en">ORDER NOW →</span>
+            </a>
+            <p class="text-xs mt-4 opacity-80">
+              <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+              <span class="lang-uz"
+                >*Anonim yetkazib berishni kafolatlaymiz.</span
+              >
+              <span class="lang-en">*Anonymous delivery guaranteed.</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- Изображение продукта справа на десктопе -->
+        <div class="lg:w-1/2 flex justify-center">
+          <div class="relative w-max">
+            <img
+              src="assets/12. Гептрафит Капсула - bottle.png"
+              alt="Изображение продукта Geptrafit"
+              class="rounded-lg shadow-2xl max-w-sm"
+              width="150"
+              height="150"
+            />
+            <div class="discount-bubble">-50%</div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Кнопка заказа -->
+    <!-- <div>
+          <a
+            href="#order-form"
+            class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+          >
+            <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+            <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+            <span class="lang-en">ORDER NOW →</span>
+          </a>
+
+          <p class="text-xs mt-4 opacity-80">
+            <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+            <span class="lang-uz"
+              >*Anonim yetkazib berishni kafolatlaymiz.</span
+            >
+            <span class="lang-en">*Anonymous delivery guaranteed.</span>
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
+      >
+        <div class="lg:w-1/2 text-center lg:text-left order-2 lg:order-1">
+          <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">
+            <span class="lang-ru">ГЕПТРАФИТ</span>
+            <span class="lang-uz">GEPTRAFIT</span>
+            <span class="lang-en">GEPTRAFIT</span>
+          </h1>
+         
           <a
             href="#order-form"
             class="cta-button inline-block bg-amber-500 text-emerald-900 font-bold py-4 px-8 rounded-lg text-xl"
@@ -193,7 +328,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- 2. Why This Matters (Symptoms Section) -->
