--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -153,8 +153,138 @@
       </div>
     </div>
 
-    <!-- 1. Hero Section -->
     <header class="hero-gradient text-white py-12 sm:py-20">
+      <div class="container mx-auto px-6 text-center lg:hidden">
+        <!-- Логотип - первый элемент на мобилке -->
+        <div class="mb-6">
+          <img
+            src="assets/STOP ARTIROZ_RUSSIOAN_ WHITE.png"
+            alt="Логотип silamax"
+            height="150"
+            width="200"
+            class="max-w-full h-auto mx-auto"
+          />
+        </div>
+        <p
+          class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0 text-gray-300"
+        >
+          <span class="lang-ru"
+            >Натуральные капсулы от боли в суставах, воспаления и для
+            восстановления подвижности.</span
+          >
+          <span class="lang-uz"
+            >Bo‘g‘im og‘rig‘i va yallig‘lanishga qarshi tabiiy kapsulalar.</span
+          >
+          <span class="lang-en"
+            >Natural Joint Pain Relief & Anti-Inflammatory Capsules for
+            Mobility.</span
+          >
+        </p>
+
+        <!-- Изображение продукта -->
+        <div class="mb-8 flex justify-center">
+          <div class="relative w-max">
+            <img
+              src="assets/IMG_2321.png"
+              alt="Изображение продукта stopartroz"
+              class="rounded-lg shadow-2xl max-w-xs"
+              width="150"
+              height="150"
+            />
+            <div class="discount-bubble">-50%</div>
+          </div>
+        </div>
+
+        <!-- Кнопка заказа -->
+        <div>
+          <a
+            href="#order-form"
+            class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+          >
+            <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+            <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+            <span class="lang-en">ORDER NOW →</span>
+          </a>
+
+          <p class="text-xs mt-4 opacity-80">
+            <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+            <span class="lang-uz"
+              >*Anonim yetkazib berishni kafolatlaymiz.</span
+            >
+            <span class="lang-en">*Anonymous delivery guaranteed.</span>
+          </p>
+        </div>
+      </div>
+      <!-- Десктопная версия -->
+      <div
+        class="container mx-auto px-6 hidden lg:flex lg:flex-row items-center gap-8"
+      >
+        <div class="lg:w-1/2 text-left">
+          <!-- Логотип -->
+          <div class="mb-6">
+            <img
+              src="assets/STOP ARTIROZ_RUSSIOAN_ WHITE.png"
+              alt="Логотип stopartroz"
+              height="150"
+              width="200"
+              class="max-w-full h-auto"
+            />
+          </div>
+
+          <p
+            class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0 text-gray-300"
+          >
+            <span class="lang-ru"
+              >Натуральные капсулы от боли в суставах, воспаления и для
+              восстановления подвижности.</span
+            >
+            <span class="lang-uz"
+              >Bo‘g‘im og‘rig‘i va yallig‘lanishga qarshi tabiiy
+              kapsulalar.</span
+            >
+            <span class="lang-en"
+              >Natural Joint Pain Relief & Anti-Inflammatory Capsules for
+              Mobility.</span
+            >
+          </p>
+          <!-- Кнопка заказа -->
+          <div>
+            <a
+              href="#order-form"
+              class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+            >
+              <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+              <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+              <span class="lang-en">ORDER NOW →</span>
+            </a>
+            <p class="text-xs mt-4 opacity-80">
+              <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+              <span class="lang-uz"
+                >*Anonim yetkazib berishni kafolatlaymiz.</span
+              >
+              <span class="lang-en">*Anonymous delivery guaranteed.</span>
+            </p>
+          </div>
+        </div>
+
+        <!-- Изображение продукта справа на десктопе -->
+        <div class="lg:w-1/2 flex justify-center">
+          <div class="relative w-max">
+            <img
+              src="assets/IMG_2321.png"
+              alt="Изображение продукта stoprtroz"
+              class="rounded-lg shadow-2xl max-w-sm"
+              width="150"
+              height="150"
+            />
+            <div class="discount-bubble">-50%</div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- 1. Hero Section -->
+    <!-- <header class="hero-gradient text-white py-12 sm:py-20">
       <div
         class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
       >
@@ -213,7 +343,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- 2. Why This Matters (Symptoms Section) -->
