--- a/diafitass.html
+++ b/diafitass.html
@@ -102,15 +102,15 @@
   <body>
     <!-- Language Switcher -->
     <div class="bg-green-800 text-white py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <a href="#" aria-label="Diafit ass">
+      <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="Diafit ass">
           <img
             src="assets/DiafitAss.png"
             alt="diafit ass"
             width="80"
             height="30"
           />
-        </a>
+        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
