--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
   <body class="bg-gray-50">
     <!-- Language Switcher -->
     <div class="bg-green-800 text-white py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <a href="#" aria-label="Super pamyat">
+      <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="Super pamyat">
           <img
             src="assets/SUPER PAMYAT (3).png"
             alt="super pamyat"
             width="80"
             height="30"
           />
-        </a>
+        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
