--- a/geptrafit.html
+++ b/geptrafit.html
@@ -103,15 +103,15 @@
   <body>
     <!-- Language Switcher -->
     <div class="bg-emerald-800 text-white py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <a href="#" aria-label="Geptrafit">
+      <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="Geptrafit">
           <img
             src="assets/Geptrafit.png"
             alt="super pamyat"
             width="80"
             height="30"
           />
-        </a>
+        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
