--- a/silamax.html
+++ b/silamax.html
@@ -122,16 +122,16 @@
   <body>
     <!-- Top Bar with Logo and Language Switcher -->
     <div class="bg-black py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
+      <div class="container mx-auto px-6 flex justify-center items-center">
         <!-- Logo -->
-        <a href="#" aria-label="Silamax">
+        <!-- <a href="#" aria-label="Silamax">
           <img
             src="assets/SILA MAX.png"
             alt="silamax"
             width="100"
             height="50"
           />
-        </a>
+        </a> -->
         <!-- Language buttons -->
         <div class="flex border border-gray-600 rounded-full">
           <button
