--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -120,15 +120,15 @@
   <body>
     <!-- Language Switcher -->
     <div class="bg-black py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <a href="#" aria-label="Stop Artroz">
+      <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="Stop Artroz">
           <img
             src="assets/STOP ARTIROZ_RUSSIOAN_ WHITE.png"
             alt="Stop Artroz"
             width="150"
             height="30"
           />
-        </a>
+        </a> -->
 
         <div class="flex border border-gray-600 rounded-full">
           <button
