--- a/venofit.html
+++ b/venofit.html
@@ -103,10 +103,10 @@
   <body>
     <!-- Language Switcher -->
     <div class="bg-green-800 text-white py-2">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <a href="#" aria-label="venofit">
+      <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="venofit">
           <img src="assets/Venofit.png" alt="venofit" width="80" height="30" />
-        </a>
+        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
